// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should correctly display intents 1`] = `
<div
  class="header"
>
  <div
    class="headerDetails"
  >
    <div
      class="author"
    >
      <span>
        John Doe
      </span>
    </div>
    <div />
  </div>
</div>
`;

exports[`Header should display header 1`] = `
<div
  class="header"
>
  <div
    class="headerDetails"
  >
    <div
      class="author"
    >
      <span>
        John Doe
      </span>
    </div>
    <div />
  </div>
</div>
`;

exports[`Header should display header with metaContent = "Comment deleted on Facebook" 1`] = `
<div
  class="header"
>
  <div
    class="headerDetails"
  >
    <div
      class="author deletedMessage"
    >
      <span>
        John Doe
      </span>
    </div>
    <span
      class="deletedMessage ml-1"
    >
       
      Comment deleted on Facebook
    </span>
  </div>
</div>
`;

exports[`Header should display header with metaContent = "Message hidden" 1`] = `
<div
  class="header"
>
  <div
    class="headerDetails"
  >
    <div
      class="author hiddenMessage"
    >
      <span>
        John Doe
      </span>
    </div>
    <span
      class="hiddenMessage ml-1"
    >
       
      Message hidden
    </span>
  </div>
</div>
`;

exports[`Header should not display header with metaContent = "Message hidden" because the message is duplicated 1`] = `
<div
  class="header"
>
  <div
    class="headerDetails"
  >
    <div
      class="author"
    >
      <span>
        John Doe
      </span>
    </div>
    <div>
      <span
        class="clickable source"
      >
        <i
          class="icon source-icon d-inline-block icon-custom icon-facebook-feed secondary"
          id="some-header"
        />
      </span>
    </div>
    <div />
  </div>
</div>
`;
